JS, Small changes to CSS and HTML
Most of the JS is now complete.
Need to be able to go to the next question.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Welcome to my quiz!</h1>
         <div class="quiz">
             <h2 id="question">Question</h2>
-            <div id="answer-btn">
+            <div id="answer-buttons">
                 <button class="btn">Choice 1</button>
                 <button class="btn">Choice 2</button>
                 <button class="btn">Choice 3</button>
