--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div class="site">
-        <h1>Welcome to my quiz!</h1>
+        <div id="timer">
+            <span class="time-left">45</span>
+        </div>
+        <h1>Welcome to my quiz!  <button id="start-btn">Start</button></h1>
+        
         <div class="quiz">
             <h2 id="question">Question</h2>
             <div id="answer-buttons">
@@ -19,7 +23,13 @@
             </div>
             <button id="next-btn">Next</button>
         </div>
-    </div>   
+        <div id="result" class="result">
+            <div id="result-text"></div>
+            <h2>Enter your name to save your score!</h2>
+            <input type="text" id="name" placeholder="Enter your name">
+            <button id="saveScore" class="button">Save Score</button>
+        </div>
+    </div> 
     <script src="game.js"></script>
 </body>
 </html>
